# opencv-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gruzintsev_a_s/: CMakeLists.txt
gruzintsev_a_s/individual_task/: CMakeLists.txt  NightRainDetector.cpp  NightRainDetector.h  NightRainDetectorTester.cpp  NightRainDetectorTester.h  individual_task.cpp  main.cpp
gruzintsev_a_s/individual_task/other/: .directory
gruzintsev_a_s/lab1_sinusoidal_circles/: CMakeLists.txt  lab1_sinusoidal_circles.cpp
gruzintsev_a_s/lab2_brightness_range/: CMakeLists.txt  lab2_brightness_range.cpp
gruzintsev_a_s/lab3_contrast_correction/: CMakeLists.txt  lab3_contrast_correction.cpp
gruzintsev_a_s/lab4_filters/: CMakeLists.txt  lab4_filters.cpp
gruzintsev_a_s/lab5_test/: CMakeLists.txt  lab5_test.cpp
